# project-baymax

./: .env.example  .gitignore  check_composio.py  cli.py  connect_google.py  database_mcp_server.py  inspect_tool.py  main.py  pyproject.toml  seed_supabase.py  server.py  setup_hospital_slots.py  share.ps1  skills.md  supabase_schema.sql  test_composio.py  test_graph.py  test_supabase.py  transcript_matches.txt  workflow.md
.agents/skills/playwright-frontend-testing/: SKILL.md
.agents/skills/r3f-3d-experience/: SKILL.md
.agents/skills/supabase/: SKILL.md
.agents/skills/supabase-postgres-best-practices/: SKILL.md
.agents/skills/web-animation-design/: SKILL.md
baymax/: briefs.py  calendar_client.py  deep_agents.py  graph.py  mcp_client.py  models.py  nodes.py  skills.md  tools.py  utils.py
db/: migration_patient_documents.sql  migration_slots.sql
docs/: PROJECT_JOURNAL.md  workflow.mmd
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: BaymaxLogo.jsx  ChatBubble.jsx  ChatHeader.jsx  ChatInput.jsx  ChatScreen.jsx  LoginScreen.jsx  TypingIndicator.jsx
frontend/src/context/: PatientContext.jsx
frontend/src/services/: api.js
review/: IMPLEMENTATION_PLAN.md  REPORT.md  TODO.md  architecture.mermaid
workshop/: README.md  architecture-single-deepagent-vs-multi-agent.md  rag-supabase-pgvector-and-auth.md
