[project]
name = "project-baymax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "composio-core>=0.7.21",
    "composio-langchain>=0.15.0",
    "deepagents>=0.6.12",
    "fastapi>=0.115.0",
    "jsonpatch>=1.33",
    "langchain>=1.3.9",
    "langchain-core>=1.4.7",
    "langchain-nvidia-ai-endpoints>=1.4.1",
    "langgraph>=1.2.5",
    "mcp>=1.28.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pypdf>=4.0.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.34.0",
]
